<resources>
    <string name="app_name">CareSupport</string>
    <string name="yes">Yes</string>
    <string name="login_signin_msg_lbl">User Login</string>
    <string name="phone">Phone Number</string>
    <string name="pin">PIN</string>
    <string name="login_form_login">LOGIN</string>
    <string name="download">Download</string>
    <string name="name">Name</string>
    <string name="report">Report</string>
    <string name="pname">Please Enter Your Name</string>
    <string name="response">Please Enter Your Response</string>
    <string name="closedata">Close</string>
    <string name="saveclosedata">Save</string>
    <string name="action_sign_in">Sign up or register</string>
    <string name="fac">Facility</string>
    <string name="view">View Feedback</string>
    <string name="exit_confirmation_title">Exit</string>
    <string name="exiting_lbl">Are you sure you want to exit?</string>
    <string name="no">No</string>
    <string name="please_wait_lbl">Please Wait</string>
    <string name="feedback">Feedback</string>
    <string name="id">ID</string>
    <string name="hfac">Health Facility</string>
    <string name="text_searchid">Search Using Facility or Name or Contact</string>
    <string name="chat">Chat</string>
    <string name="women_name">Name of Woman</string>
    <string name="text_total_income">Total Income</string>
    <string name="med_history">Medical History</string>
    <string name="obs">Obsteric History</string>
    <string name="text_recent_transactions">Next Anc Schedule</string>
    <string name="provider">PROVIDER</string>
    <string name="client">Client</string>
    <string name="weeks">Weeks</string>
    <string name="next_anc">Next Anc Schedule</string>
    <string name="text_medical">Medical History</string>
    <string name="text_fam">Family History</string>
    <string name="lmp">LMP</string>

    <string name="mom">MOM ID</string>
    <string name="dob">Date of Birth</string>
    <string name="address">Address</string>
    <string name="whatsapp">Whatsapp Contact</string>
    <string name="friendn">Name of Friend</string>
    <string name="friendp">Friend Phone Number</string>
    <string name="friendw">Friend Whatsapp Number</string>
    <string name="reminder">How often would you like us to ask about your health?</string>
    <string name="incompletenotsaved">Some fields are empty!</string>
    <string name="diagnse">Have you ever been diagnosed of having any of the Following Conditions?</string>
    <string name="diagnose">Have your family member ever been diagnosed of having any of the Following Conditions?</string>
    <string name="diagnses">Do you have any health problem you would like to report to your Health Provider?</string>
    <string name="HEART_DISEASE">HEART DISEASE</string>
    <string name="SICKLE_CELL_DISEASE">SICKLE CELL DISEASE</string>
    <string name="DIABETES">DIABETES</string>
    <string name="EPILEPSY">EPILEPSY</string>
    <string name="HIV_INFECTION">HIV INFECTION</string>
    <string name="ASTHMA">ASTHMA</string>
    <string name="RESPIRATORY_DISEASE">RESPIRATORY DISEASE</string>
    <string name="TB_INFECTION">TB INFECTION</string>
    <string name="MENTAL_HEALTH">MENTAL HEALTH</string>
    <string name="ALLERGIES">ALLERGIES</string>
    <string name="SURGERY">SURGERY</string>
    <string name="pregn">Reminder</string>
    <string name="obs_history">Obsteric History</string>
    <string name="recent_del">Recent Delivery</string>
    <string name="fam_history">Family History</string>
    <string name="inquiry">Health Inquiry</string>
    <string name="anc_alert">ANC Alert</string>
    <!--    Prereminder-->
    <string name="PREGID">Pregnancy ID</string>
    <string name="FIRST_GA_DATE">When was your last menstrual cycle?</string>
    <string name="SELECT_DATE">SELECT DATE</string>
    <string name="FIRST_GA_WKS">How old was the pregnancy when you first noticed it? Weeks</string>
    <string name="FIRST_GA_DAYS">How old was the pregnancy when you first noticed it? Days</string>
    <string name="NEXT_ANC_SCHEDULE_DATE">When is your next ANC visit?</string>
    <string name="PLANNED_ANC_FACILITY">Which facility will you attend your next ANC??</string>
    <string name="PLANNED_DELIVERY_PLACE">Place you intend to Deliver?</string>
    <string name="parity">Parity</string>
    <string name="GRAVIDITY">GRAVIDITY</string>
    <string name="SPONTANEOUS_ABORTIONS">SPONTANEOUS ABORTIONS</string>
    <string name="INDUCED_ABORTIONS">INDUCED ABORTIONS</string>
    <string name="delivery_out">Delivery Outcome</string>
    <string name="place">Where did you have your most recent delivery?</string>
    <string name="ga">What was the Gestational Age at birth for your most recent delivery</string>
    <string name="PREGPROBLEMS">Did you experience any of the following pregnancy problems during your most recent delivery?</string>
    <string name="LABOUR_COMPLICATIONS">Did you experience any of the following labor complications during your most recent delivery?</string>
    <string name="DELIVERY_MODE">What was the delivery model for your most recent delivery?</string>
    <string name="MULTIPLE_PREGNANCIES">MULTIPLE PREGNANCIES</string>
    <string name="BIRTH_DEFECTS">BIRTH DEFECTS</string>
    <string name="pregnancy">Register Pregnancy</string>
    <string name="restore_bckup">Restore Backup</string>
    <string name="gadate">Which date did you first notice this pregnancy?</string>
    <string name="date">Select Date</string>
    <string name="recorded">Estimated Date of Conception?</string>
    <string name="delivery_date">Expected Date of Delivery</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="feel">How are you feeling today?</string>
    <string name="daily">How do you feel today?</string>
    <string name="stomach">Stomach Ache</string>
    <string name="diarrhoea">Diarrhoea</string>
    <string name="dates">Date</string>
    <string name="dailys">Daily Report</string>
    <string name="dail">Daily History</string>
    <string name="nhisno">NHIS Number</string>
    <string name="community">Community</string>
    <string name="addr">Address</string>
    <string name="lma">Landmark</string>
    <string name="dis">District</string>
    <string name="g6pd">G6PD Status</string>
    <string name="mstatus">Marital Status</string>
    <string name="edul">Educational Level</string>
    <string name="occu">Occupation</string>
    <string name="nos">Name of Spouse</string>
    <string name="tels">Spouse Phone Number</string>
    <string name="addrs">Spouse Address</string>
    <string name="occus">Spouse Occupation</string>
    <string name="eduls">Spouse Educational Level</string>
    <string name="dnk">Don\'t Know</string>
    <string name="Other">Other</string>
    <string name="oth">Other, Please specify</string>
    <string name="nor">Normal</string>
    <string name="abnor">Abnormal</string>
    <string name="con">What is your general health condition today?</string>
    <string name="face">How is your face?</string>
    <string name="neck">How is your Head and Neck?</string>
    <string name="bre">How do feel in your Breast?</string>
    <string name="heart">How do you feel in/around your Heart?</string>
    <string name="lung">How do you feel in your Lungs?</string>
    <string name="othr">Do you have any other complaints?</string>
    <string name="Married">Married</string>
    <string name="m2">Divorced or permanently separated</string>
    <string name="m3">Single</string>
    <string name="m4">Not married, but living with a partner (cohabitating)</string>
    <string name="m5">Never married</string>
    <string name="m6">Widowed</string>
    <string name="edd">Expected Delivery Date</string>
    <string name="outcomeDate">Outcome Date</string>
    <string name="signup">Register</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="pick_date">Select Date</string>
    <string name="sched">Schedule Next ANC</string>
    <string name="send">Send</string>
    <string name="complaints">Complaints</string>
    <string name="kindly_schedule_next_anc">Kindly Schedule Your Next ANC</string>
    <string name="nextanc">Next ANC Schedule</string>
    <string name="dayys">Your Next ANC Schedule is in</string>
    <string name="dayy">Day(s)</string>
    <string name="med">MEDICAL HISTORY</string>
    <string name="disabled">Notifications Disabled</string>
    <string name="enabled">Please enable notifications for this app in your device settings to receive updates.</string>
    <string name="setting">Go to Settings</string>
    <string name="dailycomp">Daily Complaint</string>
    <string name="cmp">Kindly Complete your Daily Complaints Form</string>
    <string name="desc">Describe Your Health Problem</string>
    <string name="refresh">Refresh</string>
    <string name="enquiry">Enquiry</string>
    <string name="end_preg">End Pregnancy</string>
    <string name="medi">MEDICAL</string>
    <string name="obst">Obsteric</string>
    <string name="preg">Pregnancy</string>
    <string name="profile">Profile</string>
    <string name="ancerror">Date Cannot Be Less Than Today\'s Date</string>
    <string name="providers">Provider?</string>
    <string name="clients">Client?</string>
    <string name="health">Health Facility</string>
    <string name="terminate">END PREGNANCY</string>
    <string name="endpreg">TERMINATE PREGNANCY</string>
    <string name="outcome">What was the Outcome</string>
    <string name="placede">Place of Outcome/Delivery</string>
    <string name="inactive">There is no Active Pregnancy?</string>
    <string name="ancerrors">Cannot Be a Future Date</string>
    <string name="anc">Date of Outcome Cannot be before Pregnancy Outcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">PIN</string>
    <string name="email">User ID/Email</string>
    <string name="pregnant_woman_icon">Pregnant Woman</string>
    <string name="pregnant_woman_login">Client Login</string>
    <string name="healthcare_provider_login">Provider Login</string>
    <string name="healthcare_provider_icon">Provider</string>
    <string name="sign_up">Sign Up</string>

</resources>